// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with no counters renders the title and AddCounter component 1`] = `
<div
  className="App"
>
  <h1>
    Counter App
  </h1>
  <AddCounterContainer />
</div>
`;

exports[`with some counters renders the title, AddCounter, and each Counter 1`] = `
<div
  className="App"
>
  <h1>
    Counter App
  </h1>
  <AddCounterContainer />
  <CounterContainer
    id="asdf"
    key="asdf"
  />
  <CounterContainer
    id="qwer"
    key="qwer"
  />
</div>
`;
